bot.log
✅ Connected to MySQL database
[2025-02-24 18:30:03] [INFO    ] discord.client: logging in using static token
[2025-02-24 18:30:04] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 40a19385b9cfeebcb0536e6f68c6f324).
✅ Logged in as Cali#5463
✅ Connected to MySQL database
[2025-02-24 18:30:09] [INFO    ] discord.client: logging in using static token
[2025-02-24 18:30:10] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: ec259c7f5f818c52fe812a39d506c45b).
✅ Logged in as Cali#5463
✅ Connected to MySQL database
[2025-02-24 18:30:43] [INFO    ] discord.client: logging in using static token
[2025-02-24 18:30:43] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: ca48ac75b6e6999f8afb552917245d38).
✅ Logged in as Cali#5463
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
✅ Connected to MySQL database
[2025-02-24 18:56:31] [INFO    ] discord.client: logging in using static token
[2025-02-24 18:56:32] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: fcfbc3479d568c5f6ccc4c5dc896c5a2).
✅ Logged in as Cali#5463
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
  File "/home/ec2-user/ai-assistant/bot.py", line 72
    async def await save_thread(user_id, thread_id):
              ^
SyntaxError: invalid syntax
[2025-02-24 19:11:49] [INFO    ] discord.client: logging in using static token
[2025-02-24 19:11:49] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: c50a85699dd32d51cb9c8e7540718bb1).
✅ Connected to MySQL database (async)
✅ Async MySQL connection established.
✅ Logged in as Cali#5463
✅ Retrieved existing thread from cache/MySQL for user 1304209255741784141: thread_p7tGyRMDGr4SsHAQoXf9jIGX
📝 Received text: hey
⏳ Processing OpenAI request...
✅ Retrieved existing thread from cache/MySQL for user 973680778200358932: thread_kNvlI89ysD4z8BIZd3cGwuSN
📝 Received text: hello
⏳ Processing OpenAI request...
Traceback (most recent call last):
  File "/home/ec2-user/ai-assistant/bot.py", line 375, in <module>
    bot.run(DISCORD_TOKEN)
  File "/home/ec2-user/.local/lib/python3.9/site-packages/discord/client.py", line 869, in run
    asyncio.run(runner())
  File "/usr/lib64/python3.9/asyncio/runners.py", line 44, in run
    return loop.run_until_complete(main)
  File "/usr/lib64/python3.9/asyncio/base_events.py", line 634, in run_until_complete
    self.run_forever()
  File "/usr/lib64/python3.9/asyncio/base_events.py", line 601, in run_forever
    self._run_once()
  File "/usr/lib64/python3.9/asyncio/base_events.py", line 1869, in _run_once
    event_list = self._selector.select(timeout)
  File "/usr/lib64/python3.9/selectors.py", line 469, in select
    fd_event_list = self._selector.poll(timeout, max_ev)
  File "/home/ec2-user/ai-assistant/bot.py", line 370, in <lambda>
    signal.signal(signal.SIGTERM, lambda signum, frame: shutdown())
  File "/home/ec2-user/ai-assistant/bot.py", line 368, in shutdown
    asyncio.run(close_db_connection())
  File "/usr/lib64/python3.9/asyncio/runners.py", line 33, in run
    raise RuntimeError(
RuntimeError: asyncio.run() cannot be called from a running event loop
Exception ignored in: <function Connection.__del__ at 0x7f1b38f64550>
Traceback (most recent call last):
  File "/home/ec2-user/.local/lib/python3.9/site-packages/aiomysql/connection.py", line 1131, in __del__
  File "/home/ec2-user/.local/lib/python3.9/site-packages/aiomysql/connection.py", line 339, in close
  File "/usr/lib64/python3.9/asyncio/selector_events.py", line 698, in close
  File "/usr/lib64/python3.9/asyncio/base_events.py", line 751, in call_soon
  File "/usr/lib64/python3.9/asyncio/base_events.py", line 515, in _check_closed
RuntimeError: Event loop is closed
sys:1: RuntimeWarning: coroutine 'close_db_connection' was never awaited
[2025-02-24 19:33:30] [INFO    ] discord.client: logging in using static token
[2025-02-24 19:33:30] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: 73be89b6de259be0c0c170773a42c6db).
✅ Connected to MySQL database (async)
✅ Async MySQL connection established.
✅ Logged in as Cali#5463
✅ Retrieved existing thread from cache/MySQL for user 973680778200358932: thread_kNvlI89ysD4z8BIZd3cGwuSN
📝 Received text: hey
⏳ Processing OpenAI request...
